--- a/src/main/resources/com/microproject/microproject/main-view.fxml
+++ b/src/main/resources/com/microproject/microproject/main-view.fxml
@@ -5,7 +5,10 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
 <?import javafx.geometry.Insets?>
 
 <BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.microproject.microproject.MainController">
@@ -27,10 +30,30 @@
                 <Insets top="10" right="10" bottom="10" left="10"/>
             </padding>
             <children>
-                <TableView fx:id="instructionQueueTable" prefWidth="200" prefHeight="100"/>
-                <TableView fx:id="reservationStationsTable" prefWidth="200" prefHeight="100"/>
-                <TableView fx:id="registerFileTable" prefWidth="200" prefHeight="100"/>
-                <TableView fx:id="cacheTable" prefWidth="200" prefHeight="100"/>
+                <Label text="Instruction Queue"/>
+                <TableView fx:id="instructionQueueTable" prefWidth="600" prefHeight="150">
+                    <columns>
+                        <TableColumn fx:id="instructionColumn" text="Instruction"/>
+                        <TableColumn fx:id="issueCycleColumn" text="Issue"/>
+                        <TableColumn fx:id="startExecCycleColumn" text="Start Exec"/>
+                        <TableColumn fx:id="endExecCycleColumn" text="End Exec"/>
+                        <TableColumn fx:id="writeBackCycleColumn" text="Write Back"/>
+                    </columns>
+                </TableView>
+                <Label text="Reservation Stations"/>
+                <TableView fx:id="reservationStationsTable" prefWidth="600" prefHeight="200">
+                    <columns>
+                        <TableColumn fx:id="rsNameColumn" text="Name"/>
+                        <TableColumn fx:id="rsBusyColumn" text="Busy"/>
+                        <TableColumn fx:id="rsOpColumn" text="Op"/>
+                        <TableColumn fx:id="rsVjColumn" text="Vj"/>
+                        <TableColumn fx:id="rsVkColumn" text="Vk"/>
+                        <TableColumn fx:id="rsQjColumn" text="Qj"/>
+                        <TableColumn fx:id="rsQkColumn" text="Qk"/>
+                        <TableColumn fx:id="rsDestColumn" text="Dest"/>
+                    </columns>
+                </TableView>
+                <Button text="Next Cycle" onAction="#handleNextCycle"/>
             </children>
         </VBox>
     </center>
